[package]
name = "pwmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
ciborium = "0.2.0"
serde = { version = "1", features = ["derive"] }
